Fixed alignment of projects, updated resume

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -25,10 +25,8 @@
   margin-top: 5px;
 }
 
-.projImg{
+.card-img-top{
   height: 200px;
-  width: 100%;
-  object-fit: cover;
 }
 
 .resumeSec{
